<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff4d9"
    tools:context=".AuthActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AuthActicityTItle"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="130dp"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:hint = "@string/AuthActivityLoginHint"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#ccbfbf"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:hint = "@string/AuthActivityPassHint"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#ccbfbf"/>



    <Button
        android:id="@+id/button"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/AuthActivityButton" />
</LinearLayout>